# Django-QuerySet-Methods-Demo

./: README.md  manage.py  pyproject.toml
demo/: baker_recipes.py  models.py
demo/management/commands/: make_fake_data.py
demo/migrations/: 0001_initial.py  0002_rating_value.py
djangoORMQuerysetTalk/: asgi.py  settings.py  urls.py  wsgi.py
