[tool.poetry]
name = "djangoormquerysettalk"
version = "0.1.0"
description = ""
authors = ["Joe Howard <joe.howard@octoenergy.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
black = "^22.6.0"
model-bakery = "^1.6.0"
Faker = "^13.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
